<resources>
    <string name="app_name">Personal Manager</string>
    <string name="note_title">Название</string>
    <string name="note_description">Описание</string>
    <string name="button_add_text">ДОБАВИТЬ</string>
    <string name="button_save_text">СОХРАНИТЬ</string>
    <string name="button_last_note_text">ПОКАЗАТЬ ПОСЛЕДНЮЮ ЗАМЕТКУ</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="add_note_string">ДОБАВИТЬ</string>
    <string name="note_default_title">Записка</string>
    <string name="landscape">LANDSCAPE</string>
    <string name="button_reduct">РЕДАКТИРОВАТЬ</string>
    <string name="note_list_activity_label">Список Записок</string>
    <string name="showListButtonText">Список</string>
    <string name="listactivity">ListActivity</string>
    <string name="listfragment">ListFragment</string>
</resources>