<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/noteTitleText"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/note_title"
        android:inputType="text"
        android:maxLength="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/noteDescriptionText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/note_description"
        android:inputType="text"
        android:lines="10"
        android:maxLines="@integer/max_lines_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/flow"
        tools:layout_editor_absoluteY="70dp" />

    <ImageButton
        android:id="@+id/nextNoteButton"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/previousNoteButton"
        app:layout_constraintStart_toStartOf="parent"
        tools:src="@android:drawable/ic_media_play" />

    <ImageButton
        android:id="@+id/previousNoteButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:rotationY="180"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nextNoteButton"
        tools:src="@android:drawable/ic_media_play" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/navigationFlow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:constraint_referenced_ids="previousNoteButton,nextNoteButton"
        app:flow_wrapMode="chain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

    </androidx.constraintlayout.helper.widget.Flow>

    <Button
        android:id="@+id/addNoteButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/button_add_text"
        app:layout_constraintEnd_toStartOf="@+id/editNoteButton"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/editNoteButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/button_save_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addNoteButton"
        />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/addAndEditButtonFlow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:constraint_referenced_ids="addNoteButton,editNoteButton"
        app:flow_wrapMode="chain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

    </androidx.constraintlayout.helper.widget.Flow>
    <Button
        android:id="@+id/showLastNoteButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/button_last_note_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        />
    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:constraint_referenced_ids="noteTitleText,noteDescriptionText,navigationFlow,addAndEditButtonFlow,showLastNoteButton"
        app:flow_wrapMode="chain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

    </androidx.constraintlayout.helper.widget.Flow>

</androidx.constraintlayout.widget.ConstraintLayout>